# NutriOS-AMD-Slingshot-Promptathon

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  config.py  main.py  plan.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
middleware/: __init__.py  auth.py
models/: __init__.py  schemas.py
routers/: __init__.py  coach.py  log.py  nudge.py  report.py
services/: __init__.py  calendar_svc.py  context.py  firestore_svc.py  gemini.py  maps.py
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: __init__.py  conftest.py  test_coach.py  test_log.py  test_nudge.py
