[project]
name = "nutrios"
version = "1.0.0"
description = "Context-aware food intelligence system powered by Gemini AI"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100
